--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile2.png" alt="James Lee" />
+            <img class="profile-image img-responsive pull-left" src="assets/images/profile2.png" alt="James Lee" width="500" height="600"/>
             <div class="profile-content pull-left">
                 <h1 class="name">Moises Meza</h1>
                 <h2 class="desc">Web App Developer</h2>   
