--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile2.png" alt="James Lee" width="500" height="600"/>
+            <img class="profile-image img-responsive pull-left" src="assets/images/profile2.png" alt="James Lee" width="100" height="100"/>
             <div class="profile-content pull-left">
                 <h1 class="name">Moises Meza</h1>
-                <h2 class="desc">Web App Developer</h2>   
+                <h2 class="desc">Electronics Engineer</h2>   
                 <ul class="social list-inline">
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
