--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile2.png" alt="James Lee" width="80" height="80"/>
+            <img class="profile-image img-responsive pull-left" src="assets/images/profile2.png" alt="James Lee" width="100" height="100"/>
             <div class="profile-content pull-left">
                 <h1 class="name">Moises Meza</h1>
                 <h2 class="desc">Electronics Engineer</h2>   
@@ -190,9 +190,8 @@
                         <h2 class="heading sr-only">Basic Information</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>San Francisco, US</li>
-                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">jameslee@website.com</a></li>
-                                <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="#">http://www.website.com</a></li>
+                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Lima, Perú</li>
+                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">moises.meza@upch.pe</a></li>
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
