--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                         <div class="content">    
                                                
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="https://wrapbootstrap.com/theme/delta-promote-mobile-app-effectively-WB09R23P8?ref=3wm" target="_blank">KickStarter - Potato Salad App</a></h3>
-                                <p class="summary">A mobile app to help you make delicious potato salad</p>
+                                <h3 class="title"><a href="https://wrapbootstrap.com/theme/delta-promote-mobile-app-effectively-WB09R23P8?ref=3wm" target="_blank">IQUPA</a></h3>
+                                <p class="summary">An Intelligence garbage trash</p>
                                 <div class="featured-image">
                                     <a href="https://wrapbootstrap.com/theme/delta-promote-mobile-app-effectively-WB09R23P8?ref=3wm" target="_blank">
-                                    <img class="img-responsive project-image" src="assets/images/projects/project-featured.png" alt="project name" />
+                                    <img class="img-responsive project-image" src="assets/images/projects/iqupa1.png" alt="project name" />
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">App</div>
