--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
                         <h2 class="heading">About Me</h2>
                         <div class="content">
                             <p>My name is Moises, Nice to meet you, I'm a Peruvian engineer, who likes technology for medicine such as medical device development, the Internet of medical things, bio-robots, bioengineering, machine learning, etc</p>    
-                                 
+                            <p>Currently, I work as a Lecturer at Universidad Peruana Cayetano Heredia, part of the faculty of Biomedical Engineering. I teach 3 courses:</p>   
+                                <ul>
+                                    <li>Introduction to Biomedical Signal</li>
+                                    <li>Pattern Recognition</li>
+                                    <li>Clinic applications of Signal and images</li>
+                                </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
                 </section><!--//section-->
