--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 <p class="summary">An Intelligence garbage trash</p>
                                 <div class="featured-image">
                                     <a href="https://wrapbootstrap.com/theme/delta-promote-mobile-app-effectively-WB09R23P8?ref=3wm" target="_blank">
-                                    <img class="img-responsive project-image" src="assets/images/projects/iqupa1.png" alt="project name" />
+                                    <img class="img-responsive project-image" src="assets/images/projects/iqupa1.png" alt="project name" width="500" height="500"/>
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">App</div>
