--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img class="profile-image img-responsive pull-left" src="assets/images/profile2.png" alt="James Lee" width="200" height="240"/>
             <div class="profile-content pull-left">
                 <h1 class="name">Moises Meza</h1>
-                <h2 class="desc">Electronics Engineer</h2>   
+                <h2 class="desc">Electronics Engineer/TinyML developer</h2>   
                 <ul class="social list-inline">
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
