--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <h2 class="heading">Skills</h2>
                         <div class="content">
                             <p class="intro">
-                                Intro about your skills goes here. Keep the list lean and only show your primary skillset. You can always provide a link to your Linkedin or Coderwall profile so people can get more info there.</p>
+                                I have experience working on Radar projects, as well as, implementing signal processing algorithms such as FIR, IIR, Wavelets, and so one. Nowadays, I work developing biomedical prototypes for my faculty, so I use in my every day activities these skills:</p>
                             
                             <div class="skillset">
                                
