--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
                                 <h3 class="title"><a href="https://wrapbootstrap.com/theme/delta-promote-mobile-app-effectively-WB09R23P8?ref=3wm" target="_blank">IQUPA</a></h3>
                                 <p class="summary">An Intelligence garbage trash</p>
                                 <div class="featured-image">
-                                    <a href="https://wrapbootstrap.com/theme/delta-promote-mobile-app-effectively-WB09R23P8?ref=3wm" target="_blank">
+                                    <p align="center">
+                                        <a href="https://wrapbootstrap.com/theme/delta-promote-mobile-app-effectively-WB09R23P8?ref=3wm" target="_blank"></a>
+                                    </p>
+                                    
                                     <img class="img-responsive project-image" src="assets/images/projects/iqupa1.png" alt="project name" width="500" height="500"/>
                                     </a>
                                     
